# hackaway-hackathon-2026

./: .envrc.example  .gitignore  README.md  compose.yaml
backend/: .dockerignore  Dockerfile  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 6f3bf243ebf6_initial_migration.py
backend/app/: config.py  main.py
backend/app/common/: db.py
backend/app/common/models/: __init__.py  base.py  listing.py  negotiation.py  transaction.py  user.py
backend/app/common/repos/: __init__.py  base.py
backend/app/common/schemas/: __init__.py  base.py
backend/app/common/types/: __init__.py  listings.py  negotiations.py  transactions.py
backend/app/integrations/: embeddings.py
backend/app/modules/categories/: router.py  schemas.py  service.py
backend/app/modules/listings/: models.py  router.py  schemas.py  service.py
backend/app/modules/negotiations/: router.py  schemas.py  service.py
backend/app/modules/transactions/: router.py  schemas.py  service.py
backend/tests/: conftest.py  domain_conftest.py  test_app.py
backend/tests/categories/: test_router.py  test_schemas.py  test_service.py
backend/tests/common/: test_models.py  test_repos.py  test_schemas.py
backend/tests/integrations/: test_embeddings.py
backend/tests/listings/: test_models.py  test_router.py  test_schemas.py  test_search_integration.py  test_service.py
backend/tests/negotiations/: test_models.py  test_service.py
backend/tests/transactions/: test_models.py  test_service.py
backend/tests/users/: test_models.py  test_router.py  test_schemas.py  test_service.py
(+36 files in other folders)
